2004-04-08  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/scaled-font-metric.cc (text_dimension): only multiply with
	magnification_ when looking up in orig_.

	* scm/output-tex.scm (text): switch off char-mapping.

	* lily/tfm.cc (coding_scheme): replace ' ' in encoding with '-',
	because AFM's encoding field cannot have spaces.

2004-04-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-ps.scm (define-fonts): More re/encoding tweaking.

2004-04-08  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/paper-def.cc (find_scaled_font): change to inputencoding.

	* mf/cmr.enc: new file, without hi-bit ascii info. 

	* lily/bezier-bow.cc (slur_shape): make indent dependent on
	width. This removes the 'hook' at the end of a long slur.

	* buildscripts/mf-to-table.py (parse_logfile): don't append
	encoding to fontname.

2004-04-07  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-ps.scm (define-fonts): Load .enc only once.

	* mf/GNUmakefile (INSTALLATION_OUT_SUFFIXES): Install .enc files
	too.

2004-04-07  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* buildscripts/mf-to-table.py (parse_logfile): remove spaces from
	encoding field.

	* lily/stencil-scheme.cc: remove ly:fontify-atom 

	* ly/portuges.ly (pitchnames): new file.

	* lily/include/lily-guile.hh: many new ly_ functions.  Thanks to
	Michael Welsh Duggan

	* lily/*.cc: deprecate gh_ interface. Thanks to Michael Welsh Duggan

	* ly/nederlands.ly: add comment about digits.

	* lily/scaled-font-metric.cc (derived_mark): idem.

	* scm/encoding.scm (make-encoding-mapping): change permutation to
	mapping.

	* lily/scaled-font-metric.cc (derived_mark): is a const method.
	(Modified_font_metric): make alist for coding_description_
	(LY_DEFINE): remove coding-name.

	* scm/output-tex.scm (text): remove debugging code.

	* lily/scaled-font-metric.cc (ly_font_encoding): return vector

	* buildscripts/mf-to-table.py (parse_logfile): read EncodingScheme
	from infile.
