@@ -18,6 +18,7 @@ BUG HUNTERS/SUGGESTIONS
 
 David Bobroff
 Stephen Pollei
+Peter Rosenbeck
 
 Release 2.2
 ***********
