@@ -1,3 +1,8 @@
+2004-04-08  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* scripts/abc2ly.py (parse_file): Strip \r from lines.  Fixes DOS
+	flavour abc files (backportme).
+
 2004-04-08  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
 	* lily/scaled-font-metric.cc (text_dimension): only multiply with
